# jadn-cli

./: .gitignore  README.md  config.toml  jadn_cli.py  pyproject.toml  requirements.txt
.github/workflows/: python-app.yml
data/: music_library.cbor  music_library.json
output/: jadn_cli_error_report_20250523.csv  jadn_cli_error_report_20250528.csv  jadn_cli_error_report_20250529.csv
schemas/: invalid-music-database.jadn  music-database.jadn  music-database.jidl  music-database.json  music-database.xsd
src/logic/: cli_data_conversion.py  cli_data_validation.py  cli_schema_conversion.py  cli_schema_reverse_translate.py  cli_schema_validation.py
src/utils/: config.py  consts.py  file_utils.py  gen_utils.py  time_utils.py
src/validation/: cli_data_validation.py  cli_schema_conversion.py  validation.py
tests/: test_jadn_cli.py
whls/: jadn2-0.0.0-py2.py3-none-any.whl  jadnschema-0.3.0-py2.py3-none-any.whl  jadnschema-0.4.0-py2.py3-none-any.whl  jadnschema-0.5.0-py2.py3-none-any.whl  jadnvalidation-1.1.0-py2.py3-none-any.whl  jadnvalidation-1.2.0-py2.py3-none-any.whl  jadnxml-1.11.0-py2.py3-none-any.whl
